syntax = "proto3";
package pos.feemarket.v1;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "pos/feemarket/v1/params.proto";

option go_package = "pos/x/feemarket/types";

// Query defines the gRPC querier service.
service Query {
  // Params queries the parameters of the feemarket module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/pos/feemarket/v1/params";
  }

  // BaseFee queries the current EIP-1559 base fee.
  rpc BaseFee(QueryBaseFeeRequest) returns (QueryBaseFeeResponse) {
    option (google.api.http).get = "/pos/feemarket/v1/base_fee";
  }

  // BlockUtilization queries the current block utilization.
  rpc BlockUtilization(QueryBlockUtilizationRequest) returns (QueryBlockUtilizationResponse) {
    option (google.api.http).get = "/pos/feemarket/v1/block_utilization";
  }

  // BurnTier queries the current burn tier based on utilization.
  rpc BurnTier(QueryBurnTierRequest) returns (QueryBurnTierResponse) {
    option (google.api.http).get = "/pos/feemarket/v1/burn_tier";
  }

  // FeeStats queries cumulative fee statistics.
  rpc FeeStats(QueryFeeStatsRequest) returns (QueryFeeStatsResponse) {
    option (google.api.http).get = "/pos/feemarket/v1/fee_stats";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  FeeMarketParams params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// QueryBaseFeeRequest is the request type for the Query/BaseFee RPC method.
message QueryBaseFeeRequest {}

// QueryBaseFeeResponse is the response type for the Query/BaseFee RPC method.
message QueryBaseFeeResponse {
  // base_fee is the current EIP-1559 base fee in uomni/gas
  string base_fee = 1 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // min_gas_price is the enforced minimum gas price
  string min_gas_price = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // effective_gas_price is the max of base_fee and min_gas_price
  string effective_gas_price = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

// QueryBlockUtilizationRequest is the request type for the Query/BlockUtilization RPC method.
message QueryBlockUtilizationRequest {}

// QueryBlockUtilizationResponse is the response type for the Query/BlockUtilization RPC method.
message QueryBlockUtilizationResponse {
  // utilization is the current block utilization (0.0 - 1.0)
  string utilization = 1 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // block_gas_used is the gas consumed in the current block
  int64 block_gas_used = 2;

  // max_block_gas is the maximum gas allowed per block
  int64 max_block_gas = 3;

  // target_utilization is the target block utilization
  string target_utilization = 4 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

// QueryBurnTierRequest is the request type for the Query/BurnTier RPC method.
message QueryBurnTierRequest {}

// QueryBurnTierResponse is the response type for the Query/BurnTier RPC method.
message QueryBurnTierResponse {
  // tier is the current burn tier name ("cool", "normal", or "hot")
  string tier = 1;

  // burn_percentage is the burn rate for this tier (0.0 - 1.0)
  string burn_percentage = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // utilization is the current utilization that determined this tier
  string utilization = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

// QueryFeeStatsRequest is the request type for the Query/FeeStats RPC method.
message QueryFeeStatsRequest {}

// QueryFeeStatsResponse is the response type for the Query/FeeStats RPC method.
message QueryFeeStatsResponse {
  // total_burned is the cumulative amount burned since genesis
  string total_burned = 1 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  // total_to_treasury is the cumulative amount sent to treasury
  string total_to_treasury = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  // total_to_validators is the cumulative amount sent to validators
  string total_to_validators = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  // total_fees_processed is the sum of all three above
  string total_fees_processed = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  // treasury_address is the current treasury address
  string treasury_address = 5 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}
